[gd_scene load_steps=18 format=3 uid="uid://c0676ltae3gea"]

[ext_resource type="Script" path="res://scripts/level/TheLaboratory.gd" id="1_he5fh"]
[ext_resource type="AudioStream" uid="uid://bjjmqnsqos1mh" path="res://assets/sfx/ComputerBeeps PE190301.wav" id="2_jseq7"]
[ext_resource type="AudioStream" uid="uid://bj8gmnyojmhs7" path="res://assets/sfx/beep_n_glitch_08.wav" id="3_6p0bx"]
[ext_resource type="AudioStream" uid="uid://djno2euxrvjdx" path="res://assets/sfx/beep_n_glitch_07.wav" id="4_xanlp"]
[ext_resource type="AudioStream" uid="uid://ufgl63baue51" path="res://assets/sfx/beep_n_glitch_06.wav" id="5_lu07r"]
[ext_resource type="PackedScene" uid="uid://b1or3r36ptmby" path="res://scenes/entity/Player.tscn" id="6_5e2qs"]
[ext_resource type="PackedScene" uid="uid://dgp8hfvqec432" path="res://scenes/WaveManager.tscn" id="6_r8imk"]
[ext_resource type="PackedScene" uid="uid://cu31cxpasagc0" path="res://scenes/Wave.tscn" id="7_5hugr"]
[ext_resource type="PackedScene" uid="uid://btcxc2omgytvw" path="res://scenes/level/Stage2MapLayer.tscn" id="7_uyki4"]
[ext_resource type="Shader" path="res://scripts/shaders/PowerStage1.gdshader" id="8_463o3"]
[ext_resource type="Texture2D" uid="uid://b6hqgu8jprppr" path="res://assets/power_stage1.png" id="9_vanv6"]
[ext_resource type="PackedScene" uid="uid://rxerk6xulbkl" path="res://scenes/user_interface/PauseMenu.tscn" id="11_vmmhu"]
[ext_resource type="PackedScene" uid="uid://cfl4wvuv112yw" path="res://scenes/level/Stage1MapLayer.tscn" id="11_yh21x"]
[ext_resource type="Script" path="res://scripts/entity/Camera.gd" id="15_5xiti"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6cajc"]
shader = ExtResource("8_463o3")
shader_parameter/glow_size = 4.0
shader_parameter/base_strength = 1.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/pulse_speed = 2.0
shader_parameter/pulse_amplitude = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxsvq"]
size = Vector2(84.5, 84)

[sub_resource type="CircleShape2D" id="CircleShape2D_k642p"]
radius = 140.602

[node name="TheLaboratory" type="Node2D"]
script = ExtResource("1_he5fh")
map_stage_1_scene = ExtResource("11_yh21x")
map_stage_2_scene = ExtResource("7_uyki4")

[node name="LabAudioManager" type="Node" parent="."]

[node name="InitialBeep" type="AudioStreamPlayer" parent="LabAudioManager"]
stream = ExtResource("2_jseq7")

[node name="Beep1" type="AudioStreamPlayer" parent="LabAudioManager"]
stream = ExtResource("3_6p0bx")

[node name="Beep2" type="AudioStreamPlayer" parent="LabAudioManager"]
stream = ExtResource("4_xanlp")

[node name="Beep3" type="AudioStreamPlayer" parent="LabAudioManager"]
stream = ExtResource("5_lu07r")

[node name="MapLayer" type="Node2D" parent="."]
visible = false

[node name="Stage3MapLayer" parent="MapLayer" instance=ExtResource("7_uyki4")]

[node name="Power3" type="Sprite2D" parent="MapLayer/Stage3MapLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6cajc")
position = Vector2(1049.5, -1553)
texture = ExtResource("9_vanv6")

[node name="NextStageTrigger2" type="Area2D" parent="MapLayer/Stage3MapLayer/Power3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapLayer/Stage3MapLayer/Power3/NextStageTrigger2"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_bxsvq")

[node name="Stage2MapLayer" parent="MapLayer" instance=ExtResource("7_uyki4")]

[node name="Power2" type="Sprite2D" parent="MapLayer/Stage2MapLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6cajc")
position = Vector2(1049.5, -1553)
texture = ExtResource("9_vanv6")

[node name="NextStageTrigger2" type="Area2D" parent="MapLayer/Stage2MapLayer/Power2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapLayer/Stage2MapLayer/Power2/NextStageTrigger2"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_bxsvq")

[node name="Stage1MapLayer" parent="MapLayer" instance=ExtResource("11_yh21x")]

[node name="Power1" type="Sprite2D" parent="MapLayer/Stage1MapLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6cajc")
position = Vector2(1390.5, -1713)
texture = ExtResource("9_vanv6")

[node name="NextStageTrigger1" type="Area2D" parent="MapLayer/Stage1MapLayer/Power1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapLayer/Stage1MapLayer/Power1/NextStageTrigger1"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_bxsvq")

[node name="MapLayerCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="MaskLayers" type="Node2D" parent="MapLayerCopy"]
modulate = Color(1, 1, 1, 0)

[node name="BlackLayer" type="ColorRect" parent="MapLayerCopy/MaskLayers"]
offset_left = -5483.0
offset_top = -4797.0
offset_right = 9520.0
offset_bottom = 5224.0
color = Color(0, 0, 0, 1)

[node name="WaveManager" parent="MapLayerCopy" instance=ExtResource("6_r8imk")]
wave = ExtResource("7_5hugr")

[node name="Player" parent="." instance=ExtResource("6_5e2qs")]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-3840, 0)

[node name="Camera2D" type="Camera2D" parent="Player"]
script = ExtResource("15_5xiti")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("11_vmmhu")]

[node name="DialogueTrigger1" type="Area2D" parent="."]
position = Vector2(-1000, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger1"]
shape = SubResource("CircleShape2D_k642p")

[node name="InteractTimer" type="Timer" parent="."]
wait_time = 3.65
one_shot = true

[connection signal="body_entered" from="MapLayer/Stage2MapLayer/Power2/NextStageTrigger2" to="." method="_on_next_stage_trigger_2_body_entered"]
[connection signal="body_exited" from="MapLayer/Stage2MapLayer/Power2/NextStageTrigger2" to="." method="_on_next_stage_trigger_2_body_exited"]
[connection signal="body_entered" from="MapLayer/Stage1MapLayer/Power1/NextStageTrigger1" to="." method="_on_next_stage_trigger_1_body_entered"]
[connection signal="body_exited" from="MapLayer/Stage1MapLayer/Power1/NextStageTrigger1" to="." method="_on_next_stage_trigger_1_body_exited"]
[connection signal="body_entered" from="DialogueTrigger1" to="." method="_on_dialogue_trigger_1_body_entered"]
[connection signal="timeout" from="InteractTimer" to="." method="_on_interact_timer_timeout"]
